Cherry-pick r272054. rdar://problem/73838900

[css-flexbox] REGRESSION(r266695): content inside a `<button>` inside a flex container has a height of `0` without a declared `min-height`
    https://bugs.webkit.org/show_bug.cgi?id=220946

    Reviewed by Zalan Bujtas.

    Source/WebCore:

    Test: css3/flexbox/percentage-descendants-of-skipped-flex-item.html

    r252620 added an optimization which saves layouts for flexbox containers' descendants with percentage heights.
    That optimization relies on a hash map of percentage height descendants that is filled in with calls to
    addPercentHeightDescendant().

    FlexibleBoxImpl's like RenderButton might wrap their children in anonymous blocks. Those anonymous blocks are
    skipped for percentage height calculations in RenderBox::computePercentageLogicalHeight() and thus
    addPercentHeightDescendant() is never called for them. This means that hasPercentageHeightDescendants() would
    always wrongly return false for a child of a <button> with a percentage height.

    * rendering/RenderFlexibleBox.cpp:
    (WebCore::RenderFlexibleBox::childHasPercentHeightDescendants const): Renamed from hasPercentHeightDescendants in
    order not to clash with RenderBlock method. It now also checks whether flex items skipped from percentage
    height calculations are the containing blocks of any percentage height descendant of the flex container
    (WebCore::RenderFlexibleBox::layoutAndPlaceChildren):
    (WebCore::RenderFlexibleBox::hasPercentHeightDescendants const): Deleted.
    * rendering/RenderFlexibleBox.h:

    LayoutTests:

    * css3/flexbox/percentage-descendants-of-skipped-flex-item-expected.html: Added.
    * css3/flexbox/percentage-descendants-of-skipped-flex-item.html: Added.

    Canonical link: https://commits.webkit.org/233473@main
    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@272054 268f45cc-cd09-0410-ab3c-d52691b4dbfc

Canonical link: https://commits.webkit.org/232923.86@safari-611-branch
git-svn-id: https://svn.webkit.org/repository/webkit/branches/safari-611-branch@272160 268f45cc-cd09-0410-ab3c-d52691b4dbfc